# SSL-TCP-Server-Poco-Example

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets_msvc.json  README  main.cpp
keys/client/: cert.pem  key.key
keys/client_strict/: cert.crt  key.key
keys/root/: rootCA.crt  rootCA.key
keys/server/: cert.crt  key.key
keys/server_strict/: cert.crt  key.key
keys/test/: cert.crt  key.key
